# MyOpenCL

./: .cproject  .gitignore  .project  CMakeLists.txt  arm-linux-gnueabihf.toolchain.cmake  build.sh  vc.bat
common/: CMakeLists.txt
common/include/: common.h
hello_world_opencl/: CMakeLists.txt
image/: CMakeLists.txt
image/include/: image.h
lib/: CMakeLists.txt
